--- a/src/components/common/ModalWindow/ModalWindow.module.scss
+++ b/src/components/common/ModalWindow/ModalWindow.module.scss
@@ -1,4 +1,4 @@
-aside.root {
+.root {
   position: absolute;
   z-index: 10;
   top: 0;
@@ -58,16 +58,15 @@ aside.root {
   align-items: center;
   justify-content: space-between;
 
-  h1.title {
+  .title {
     width: 80%;
     margin-left: 10%;
     margin-block: 0;
     text-align: center;
-
     @include fontType(2em);
   }
 
-  button.closeButton {
+  .closeButton {
     width: 34px;
     height: 34px;
     align-self: flex-start;
@@ -79,7 +78,6 @@ aside.root {
     transition:
       border-color 0.2s,
       scale 0.2s;
-
     @include cross(1.3em, 3px);
 
     @include hover {
