--- a/src/components/pages/Home/components/TestComponent/TestComponent.module.scss
+++ b/src/components/pages/Home/components/TestComponent/TestComponent.module.scss
@@ -10,12 +10,11 @@
   padding-block: 0.6em;
   padding-inline: 1em;
 
-  p.testTitle {
+  .testTitle {
     overflow: hidden;
     width: 80%;
     margin: 0;
     cursor: pointer;
-
     @include fontType(1.5em);
   }
 }
@@ -24,7 +23,7 @@
   display: inline-flex;
   gap: 0.9em;
 
-  button.testButton {
+  .testButton {
     width: 2.5em;
     box-sizing: border-box;
     border: 2px $babyPowder solid;
@@ -34,13 +33,12 @@
     cursor: pointer;
   }
 
-  button.editTestButton {
+  .editTestButton {
     background-image: url('~public/images/svg/editPencil.svg');
     background-position: center;
     background-repeat: no-repeat;
     background-size: auto;
     transition: background-image 0.2s;
-
     @include colorButton($ecru);
 
     @include hover {
@@ -48,7 +46,7 @@
     }
   }
 
-  button.deleteTestButton {
+  .deleteTestButton {
     @include cross(1.4em, 3px);
     @include colorButton($oldRose);
   }
