Add formik and yup form validation

--- a/src/components/common/ModalWindow/ModalWindow.module.scss
+++ b/src/components/common/ModalWindow/ModalWindow.module.scss
@@ -30,6 +30,7 @@
   display: inline-flex;
   width: 45%;
   height: fit-content;
+  min-height: 35%;
   max-height: 70%;
   box-sizing: border-box;
   flex-direction: column;
