--- a/src/components/pages/EntryForm/EntryInput/EntryInput.module.scss
+++ b/src/components/pages/EntryForm/EntryInput/EntryInput.module.scss
@@ -1,11 +1,26 @@
-.inputContainer {
-  position: relative;
+.entryInputContainer {
   width: 80%;
-  align-self: center;
 
   @include mediumDesktop {
     width: 90%;
-    @include fontType(2.2vh);
+  }
+
+  .matchErrorTitle {
+    margin-top: 0.4em;
+    margin-bottom: 0;
+    margin-left: 1.5em;
+    transition: 0.2s;
+    @include fontType(1em, $oldRose);
+  }
+}
+
+.inputContainer {
+  position: relative;
+  width: 100%;
+  align-self: center;
+
+  @include mediumDesktop {
+    @include fontType(1.1em);
   }
 
   .inputLabel {
@@ -15,10 +30,10 @@
     background-color: $charcoal;
     opacity: 0;
     padding-inline: 0.5em;
-    @include fontType(1vw, $babyPowder);
+    @include fontType(1.2em, $babyPowder);
 
     @include mediumDesktop {
-      @include fontType(2.2vh);
+      @include fontType(1.1em);
     }
   }
 
@@ -28,13 +43,14 @@
 
   .input {
     width: 100%;
-    height: 2.7em;
+    height: 2.5em;
     transition: border 0.1s;
-    @include formInput(1.3vw);
+    @include formInput(null);
+    @include fontType(1.4em, $babyPowder);
 
     @include mediumDesktop {
       height: 3em;
-      @include fontType(3vh);
+      @include fontType(1.2em, $babyPowder);
     }
 
     &::placeholder {
@@ -85,9 +101,5 @@
     cursor: pointer;
     transform: translate(0, -50%);
     transition: background-image 0.2s;
-
-    @include mediumDesktop {
-      width: 3vh;
-    }
   }
 }
