Fix form fields errors

--- a/src/components/common/CustomInputButton/CustomInputButton.module.scss
+++ b/src/components/common/CustomInputButton/CustomInputButton.module.scss
@@ -5,6 +5,7 @@
   justify-content: center;
   border: 2px $babyPowder solid;
   border-radius: 3px;
+  aspect-ratio: 1 / 1;
   cursor: pointer;
 
   &::before {
